<resources>
    <string name="app_name">SAVELAH</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="title_home">Home</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="register">Register</string>
    <string name="account_creation_page">Account Creation Page</string>
    <string name="log_in_page">Log In Page</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="return_to_log_in_page">Return to Log In Page</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="recipes">Recipes</string>
    <string name="grocery_list">Grocery List</string>
    <string name="demo">Demo</string>
    <string name="enter_grocery_item">Enter Grocery Item</string>
    <string name="search">Search</string>
    <string name="share">SHARE</string>
    <string name="go">GO</string>
    <string name="quantity">Quantity</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="email_of_shared_users_list">Email of shared users List</string>
    <string name="ingredients_required">Ingredients required</string>
    <string name="instructions">Instructions</string>
    <string name="add_to_grocery_list">Add to Grocery List</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="save">Save</string>
    <string name="ingredient_name">Name</string>
    <string name="ingredient_amount">Amount</string>
    <string name="ingredient_unit">Unit</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="email_of_user">Email of User</string>
    <string name="tap_to_access">Tap to access</string>
    <string name="add_new_members_to_list">Add new Members to List</string>
    <string name="access_shared_lists">Access Shared Lists</string>
    <string name="search_online">Online Recipes Search</string>
    <string name="my_saved_recipes">My saved Recipes</string>
    <string name="unit">Unit</string>
    <string name="enter_your_desired_result">Enter your desired result:</string>
    <string name="ingredient_to_add">Ingredient to add</string>
    <string name="results_in_database">Results in Database</string>
    <string name="alert">ALERT!</string>
    <string name="type_in_instructions_here">Type in Instructions here</string>
    <string name="ppl_servings">ppl servings</string>
    <string name="time_required">Time required</string>
    <string name="mins">Mins</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="enter_recipe_query">Enter Recipe Query</string>
    <string name="enter_servings">Enter Servings</string>
    <string name="enter_title_here">Enter Title here</string>
    <string name="cancel">Cancel</string>
    <string name="key_in_grocery_item_to_add_to_list">Key in Grocery Item to add to List</string>
    <string name="no_recipes_to_display_press_back">No Recipes to display! Press back!</string>
    <string name="key_in_your_email_here">Key in your Email here</string>
    <string name="key_in_your_password_here">Key in your Password here</string>
    <string name="units">Units</string>
    <string name="delete">Delete</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="sharing">Sharing</string>
    <string name="edit">Edit</string>
    <string name="welcome_to_savelah">Welcome to SaveLAH!</string>
    <string name="tap_on_the_email_to_access_the_list">Tap on the email to access the list!</string>


    <!-- Strings related to login -->
</resources>
