<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="?android:attr/listPreferredItemHeight">

<EditText android:id="@+id/edit_item_ingredient_name"
    android:selectAllOnFocus="true"
    android:layout_weight="8"
    android:hint="@string/ingredient_name"
    android:layout_gravity="center_vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

<EditText android:id="@+id/edit_item_ingredient_qty"
    android:selectAllOnFocus="true"
    android:hint="@string/ingredient_amount"
    android:inputType="numberDecimal"
    android:layout_weight="2"
    android:layout_gravity="center_vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

<EditText android:id="@+id/edit_item_ingredient_qty_name"
    android:selectAllOnFocus="true"
    android:hint="@string/ingredient_unit"
    android:layout_weight="2"
    android:layout_gravity="center_vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

<ImageButton android:id="@+id/btn_item_ingredient_del"
    android:src="@drawable/ic_clear_dark"
    style="@style/transparent_ImgBtn"
    android:layout_weight="0"
    android:layout_gravity="center_vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

</LinearLayout>